[project]
name = "pages"
version = "0.1.0"
description = "Testing creating a project with poetry"
authors = [
    {name = "pavelkalinchuk",email = "715m4s@gmail.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.0"
selene = "^2.0.0rc9"
selenium = "^4.27.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.13"
